[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/NinePatchPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Crafting.gd" type="Script" id=2]

[node name="Crafting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchPanel" parent="." instance=ExtResource( 1 )]
margin_left = 176.304
margin_top = 102.683
margin_right = 462.304
margin_bottom = 415.683

[node name="MarginContainer" type="MarginContainer" parent="NinePatchPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 13.0
margin_right = -13.0
margin_bottom = -13.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="NinePatchPanel/MarginContainer"]
margin_right = 260.0
margin_bottom = 287.0
tab_align = 0

[node name="Craft" type="Control" parent="NinePatchPanel/MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 250, 250 )

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchPanel/MarginContainer/TabContainer/Craft"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchPanel/MarginContainer/TabContainer/Craft/HBoxContainer"]
margin_right = 40.0
margin_bottom = 251.0
rect_min_size = Vector2( 40, 0 )

[node name="Recipes" type="VBoxContainer" parent="NinePatchPanel/MarginContainer/TabContainer/Craft/HBoxContainer/ScrollContainer"]
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Details" type="Control" parent="NinePatchPanel/MarginContainer/TabContainer/Craft/HBoxContainer"]
margin_left = 44.0
margin_right = 244.0
margin_bottom = 251.0
rect_min_size = Vector2( 200, 200 )

[node name="Name" type="Label" parent="NinePatchPanel/MarginContainer/TabContainer/Craft/HBoxContainer/Details"]
margin_right = 85.0
margin_bottom = 14.0
text = "Recipe Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="NinePatchPanel/MarginContainer/TabContainer/Craft/HBoxContainer/Details"]
margin_left = -1.0
margin_top = 21.0
margin_right = 192.0
margin_bottom = 121.0
text = "Item Description"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingredients" type="HBoxContainer" parent="NinePatchPanel/MarginContainer/TabContainer/Craft/HBoxContainer/Details"]
margin_left = 0.561218
margin_top = 182.4
margin_right = 206.561
margin_bottom = 222.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftButton" type="Button" parent="NinePatchPanel/MarginContainer/TabContainer/Craft/HBoxContainer/Details"]
margin_left = -13.2763
margin_top = 230.765
margin_right = 27.7237
margin_bottom = 250.765
disabled = true
text = "Craft"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Build" type="Control" parent="NinePatchPanel/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 250, 250 )
[connection signal="pressed" from="NinePatchPanel/MarginContainer/TabContainer/Craft/HBoxContainer/Details/CraftButton" to="." method="_on_CraftButton_pressed"]
